# src/swagger.json
@@ -775,6 +775,111 @@
 				]
 			}
 		},
+		"/catalogos/categorias-usuario": {
+			"get": {
+				"operationId": "ListUserCategories",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "No content"
+					},
+					"400": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"catálogos"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/catalogos/categorias-livro": {
+			"get": {
+				"operationId": "ListBookCategories",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "No content"
+					},
+					"400": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"catálogos"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/catalogos/cursos": {
+			"get": {
+				"operationId": "ListCourses",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "No content"
+					},
+					"400": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"catálogos"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/livros": {
 			"post": {
 				"operationId": "CreateBook",
